# cses-local

./: .gitignore  README.md  knights.c  pyproject.toml  weird.py
cses_local/: __main__.py  args.py  arguments.py  browse.py  data.py  data_setup.py  preprocess.py  submit.py  utilities.py
